<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <include layout="@layout/view_title"/>

    <ImageView
        android:layout_above="@+id/tv_success"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:src="@drawable/ic_launcher"/>

    <TextView
        android:id="@+id/tv_success"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/regist_success"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:textSize="12sp"
        android:layout_marginTop="3dp"
        android:textColor="@color/gray_black"
        android:layout_below="@+id/tv_success"
        android:text="@string/is_complete_user_info"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_complete"
        android:layout_below="@+id/tv1"
        style="@style/RoundBlueButton"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:enabled="true"
        android:text="@string/complete_now"/>

    <TextView
        android:id="@+id/tv_browsing"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/main_blue"
        android:layout_below="@+id/btn_complete"
        android:layout_marginTop="10dp"
        android:text="@string/browsing"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"/>



</RelativeLayout>