<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_centerInParent="true"
        android:background="@color/main_blue"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="16dp" />

    <com.sulong.elecouple.ui.views.DynamicHeightImageView
        android:id="@+id/iv_find_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/default_label"
        auto:dhiv_heightRatio="0.4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_likes_me"
                style="@style/FindTabTextStyle"
                android:text="@string/who_likes_me" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_apply_chat"
                style="@style/FindTabTextStyle"
                android:text="@string/apply_chat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_chat"
                style="@style/FindTabTextStyle"
                android:text="@string/chat" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_engagements"
                style="@style/FindTabTextStyle"
                android:text="@string/engagements" />
        </LinearLayout>

    </LinearLayout>

    <include layout="@layout/view_find_list_head"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
