<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="190dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_engagements_state"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:text="@string/engagements_state"
            android:textColor="@color/main_red"
            android:gravity="fill_vertical"
            android:layout_height="25dp" />
        <TextView
            android:id="@+id/tv_engagements_time"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:text="@string/engagements_time"
            android:textColor="@color/text_color_black"
            android:gravity="fill_vertical"
            android:layout_height="25dp"  />
        <TextView
            android:id="@+id/tv_engagements_place"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:text="@string/engagements_place"
            android:textColor="@color/text_color_black"
            android:gravity="fill_vertical"
            android:layout_height="25dp"  />
        <TextView
            android:id="@+id/tv_engagements_theme"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:text="@string/engagements_theme"
            android:textColor="@color/text_color_black"
            android:gravity="fill_vertical"
            android:layout_height="25dp" />
        <TextView
            android:id="@+id/tv_engagements_pay"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:text="@string/engagements_pay"
            android:textColor="@color/text_color_black"
            android:gravity="fill_vertical"
            android:layout_height="25dp"  />
        <TextView
            android:id="@+id/tv_engagements_type"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:text="@string/engagements_type"
            android:textColor="@color/text_color_black"
            android:gravity="fill_vertical"
            android:layout_height="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="#fbfbfb"
        android:gravity="center_horizontal"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_height="wrap_content">
            <com.sulong.elecouple.ui.views.CircleImageView
                android:id="@+id/iv_user_head1"
                android:layout_width="50dp"
                android:src="@drawable/default_avatar"
                tools:background="#00f"
                android:layout_marginRight="-5dp"
                android:layout_toLeftOf="@+id/iv_star"
                android:scaleType="centerCrop"
                android:layout_height="50dp" />
            <com.sulong.elecouple.ui.views.CircleImageView
                android:id="@+id/iv_user_head2"
                android:layout_width="50dp"
                tools:background="#00f"
                android:layout_marginLeft="-5dp"
                android:src="@drawable/default_avatar"
                android:layout_toRightOf="@+id/iv_star"
                android:scaleType="centerCrop"
                android:layout_height="50dp" />
            <ImageView
                android:id="@+id/iv_star"
                android:layout_width="20dp"
                android:src="@drawable/default_avatar"
                tools:background="#00f"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                android:layout_height="20dp" />
        </RelativeLayout>


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:textSize="18sp"
            android:text="zhangsan"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:layout_below="@id/iv_user_head1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_check_engagements"
            style="@style/HalfCircleRoundBlueStokenButton"
            android:layout_width="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_height="30dp"
            android:layout_marginTop="15dp"
            android:text="@string/check_engagements"/>
    </LinearLayout>

</LinearLayout>