<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/split_line_h"
        android:layout_marginTop="30dp"
        android:background="@drawable/general_item_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/shoujihaoma_icon" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/phone_input_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="15sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/split_line_h"
        android:background="@drawable/general_item_divider" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/split_line_h"
        android:layout_marginTop="10dp"
        android:background="@drawable/general_item_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:gravity="center_vertical"
        android:padding="10dp">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/yanzhengma_icon" />

        <EditText
            android:id="@+id/et_verify_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/reigist_input_hint"
            android:inputType="text"
            android:singleLine="true"
            android:textSize="15sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:background="@color/main_blue" />

        <TextView
            android:id="@+id/tv_send_verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_verify_code"
            android:textColor="@color/main_blue" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/split_line_h"
        android:background="@drawable/general_item_divider" />

    <Button
        android:id="@+id/btn_next"
        style="@style/RoundBlueButton"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:enabled="false"
        android:text="@string/next_step" />
</LinearLayout>